--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.20.2",
     "babel-preset-env": "^1.1.4",
     "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "webpack": "^1.14.0"
+    "babel-preset-react": "^6.16.0"
   },
   "babel": {
     "presets": [
